[package]
name = "core"
version = "0.1.0"
authors = ["yimu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = {version = "1.0.106", features = ["derive"]}
utils = {path="../utils"}
base64 = "0.12.0"